@@ -1,3 +1,7 @@
+2021/06/17
+Added functionality to import RockMaker XML files. Therefore, one can import XML files downloaded from RockMaker website
+or import custom screens performed with the SPTLabtech Dragonfly and exported to XML.
+
 2021/05/20
 Clicking a well in the Timeline spawns a new viewing window.
 Added the option to class as "Unknown" in the drop score section.
